# PDAL

./: .gitignore  CMakeLists.txt  appveyor.yml
apps/: pdal.cpp
cmake/: directories.cmake  macros.cmake
doc/: apps.rst
include/pdal/: KernelSupport.hpp  PDALUtils.hpp  PluginManager.hpp  StageFactory.hpp
include/pdal/util/: Pool.hpp
io/las/: LasReader.cpp
kernels/delta/: DeltaKernel.cpp  DeltaKernel.hpp
kernels/diff/: DiffKernel.cpp  DiffKernel.hpp
kernels/info/: InfoKernel.cpp
kernels/omni/: OmniKernel.cpp  OmniKernel.hpp
kernels/tindex/: TIndexKernel.cpp  TIndexKernel.hpp
kernels/translate/: TranslateKernel.cpp
plugins/mrsid/io/: MrsidReader.hpp
plugins/oci/io/: OciCommon.cpp  OciWriter.cpp  OciWriter.hpp
plugins/pcl/: CMakeLists.txt
plugins/pcl/filters/: GroundFilter.cpp  GroundFilter.hpp  PCLBlock.cpp  PCLBlock.hpp
plugins/pcl/io/: PCLVisualizer.cpp  PCLVisualizer.hpp  PcdCommon.cpp  PcdCommon.hpp  PcdReader.cpp  PcdReader.hpp  PcdWriter.cpp  PcdWriter.hpp
plugins/python/: CMakeLists.txt
python/: MANIFEST.in  setup.py
python/docs/: index.rst
python/libpdalpython/: Pipeline.cpp  Pipeline.hpp  libpdalpython.pyx
python/test/: __init__.py  test_libpdal.py
scripts/appveyor/: install.cmd
src/: CMakeLists.txt  GlobalEnvironment.cpp  Kernel.cpp  KernelSupport.cpp  PluginManager.cpp  StageFactory.cpp
src/io/: CMakeLists.txt
src/kernels/: CMakeLists.txt
src/plang/: CMakeLists.txt  Environment.cpp  Invocation.cpp
src/util/: CMakeLists.txt  Pool.cpp
test/unit/: CMakeLists.txt  SpatialReferenceTest.cpp
(+49 files in other folders)
